Turning PORVL4N1, ... , PORVL15N1 to PORVL4, ... , PORVL15

--- a/notebooks/averaging_data/PhreaticLevel/28-weeks_January-12_August-03_2018/03-bgarcial-phreatic_level_generating_average_between-nodes_values.ipynb
+++ b/notebooks/averaging_data/PhreaticLevel/28-weeks_January-12_August-03_2018/03-bgarcial-phreatic_level_generating_average_between-nodes_values.ipynb
@@ -1332,8 +1332,8 @@
    "outputs": [],
    "source": [
     "# Export phreatic_level_l2_28w_avg_pd dataframe \n",
-    "# PORVL2N1 | PORVL2N2 | PORVL2_AVERAGE |\n",
-    "#          |          |                |\n",
+    "# Fecha | PORVL2N1 | PORVL2N2 | PORVL2_AVERAGE |\n",
+    "#       |          |          |                |\n",
     "phreatic_level_l2_28w_avg_pd.to_csv( '../../../../data/interim/PhreaticLevel/'  \\\n",
     "                            '28-weeks_January-12_August-03_2018/PhreaticLevelAverage_by-Lot/' \\\n",
     "                            'LOTx_N_y_AVG_x-y_table/PORVL2N1_N2_average_per-lot.csv', sep=',', header=True, index=False)"
@@ -1432,10 +1432,455 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Export phreatic_level_l2_28w_avg_pd_df dataframe \n",
+    "# Fecha | PORVL2_AVERAGE |\n",
+    "#       |                |\n",
     "phreatic_level_l2_28w_avg_pd_df.to_csv( '../../../../data/interim/PhreaticLevel/'  \\\n",
     "                            '28-weeks_January-12_August-03_2018/PhreaticLevelAverage_by-Lot/' \\\n",
     "                            'PORVL2_average_per-day.csv', sep=',', header=True, index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Turning PORVL4N1, ... , PORVL15N1 average per day values to PORVL4, ... , PORVL1 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.1 Reading PORVL4N1 average per day values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phreatic_level_l4n1_28w_avg_pd = pd.read_csv('../../../../data/interim/PhreaticLevel/'  \\\n",
+    "                    '28-weeks_January-12_August-03_2018/PhreaticLevel_By_Lots-Nodes_Average_by-day/' \\\n",
+    "                    'PORVL4N1_average_per-day.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fecha</th>\n",
+       "      <th>PORVL4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2018-01-12</td>\n",
+       "      <td>0.818261</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2018-01-13</td>\n",
+       "      <td>0.532917</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2018-01-14</td>\n",
+       "      <td>0.482083</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2018-01-15</td>\n",
+       "      <td>0.555833</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2018-01-16</td>\n",
+       "      <td>0.764167</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Fecha    PORVL4\n",
+       "0  2018-01-12  0.818261\n",
+       "1  2018-01-13  0.532917\n",
+       "2  2018-01-14  0.482083\n",
+       "3  2018-01-15  0.555833\n",
+       "4  2018-01-16  0.764167"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "phreatic_level_l4n1_28w_avg_pd = phreatic_level_l4n1_28w_avg_pd.rename(columns={\n",
+    "    'PORVL4N1':'PORVL4'\n",
+    "})\n",
+    "phreatic_level_l4n1_28w_avg_pd.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export phreatic_level_l4n1_28w_avg_pd dataframe \n",
+    "# Fecha | PORVL4 |  # Only one column one N1\n",
+    "#       |       |\n",
+    "phreatic_level_l4n1_28w_avg_pd.to_csv( '../../../../data/interim/PhreaticLevel/'  \\\n",
+    "                            '28-weeks_January-12_August-03_2018/PhreaticLevelAverage_by-Lot/' \\\n",
+    "                            'PORVL4_average_per-day.csv', sep=',', header=True, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        Fecha    PORVL5\n",
+      "0  2018-01-12  0.537826\n",
+      "1  2018-01-13  0.292500\n",
+      "2  2018-01-14  0.246667\n",
+      "3  2018-01-15  0.245417\n",
+      "4  2018-01-16  0.427500\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Reading PORVL5 average per day values\n",
+    "phreatic_level_l5n1_28w_avg_pd = pd.read_csv('../../../../data/interim/PhreaticLevel/'  \\\n",
+    "                    '28-weeks_January-12_August-03_2018/PhreaticLevel_By_Lots-Nodes_Average_by-day/' \\\n",
+    "                    'PORVL5N1_average_per-day.csv')\n",
+    "phreatic_level_l5n1_28w_avg_pd = phreatic_level_l5n1_28w_avg_pd.rename(columns={\n",
+    "    'PORVL5N1':'PORVL5'\n",
+    "})\n",
+    "print(phreatic_level_l5n1_28w_avg_pd.head())\n",
+    "# Export phreatic_level_l5n1_28w_avg_pd dataframe \n",
+    "# Fecha | PORVL5 |  # Only one column one N1\n",
+    "#       |       |\n",
+    "phreatic_level_l5n1_28w_avg_pd.to_csv( '../../../../data/interim/PhreaticLevel/'  \\\n",
+    "                            '28-weeks_January-12_August-03_2018/PhreaticLevelAverage_by-Lot/' \\\n",
+    "                            'PORVL5_average_per-day.csv', sep=',', header=True, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        Fecha    PORVL6\n",
+      "0  2018-01-12  0.829130\n",
+      "1  2018-01-13  0.510417\n",
+      "2  2018-01-14  0.488750\n",
+      "3  2018-01-15  0.529167\n",
+      "4  2018-01-16  0.717917\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Reading PORVL6 average per day values\n",
+    "phreatic_level_l6n1_28w_avg_pd = pd.read_csv('../../../../data/interim/PhreaticLevel/'  \\\n",
+    "                    '28-weeks_January-12_August-03_2018/PhreaticLevel_By_Lots-Nodes_Average_by-day/' \\\n",
+    "                    'PORVL6N1_average_per-day.csv')\n",
+    "phreatic_level_l6n1_28w_avg_pd = phreatic_level_l6n1_28w_avg_pd.rename(columns={\n",
+    "    'PORVL6N1':'PORVL6'\n",
+    "})\n",
+    "print(phreatic_level_l6n1_28w_avg_pd.head())\n",
+    "# Export phreatic_level_l5n1_28w_avg_pd dataframe \n",
+    "# Fecha | PORVL6 |  # Only one column one N1\n",
+    "#       |       |\n",
+    "phreatic_level_l6n1_28w_avg_pd.to_csv( '../../../../data/interim/PhreaticLevel/'  \\\n",
+    "                            '28-weeks_January-12_August-03_2018/PhreaticLevelAverage_by-Lot/' \\\n",
+    "                            'PORVL6_average_per-day.csv', sep=',', header=True, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        Fecha    PORVL7\n",
+      "0  2018-01-12  1.043043\n",
+      "1  2018-01-13  0.598333\n",
+      "2  2018-01-14  0.522500\n",
+      "3  2018-01-15  0.495833\n",
+      "4  2018-01-16  0.792917\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Reading PORVL7 average per day values\n",
+    "phreatic_level_l7n1_28w_avg_pd = pd.read_csv('../../../../data/interim/PhreaticLevel/'  \\\n",
+    "                    '28-weeks_January-12_August-03_2018/PhreaticLevel_By_Lots-Nodes_Average_by-day/' \\\n",
+    "                    'PORVL7N1_average_per-day.csv')\n",
+    "phreatic_level_l7n1_28w_avg_pd = phreatic_level_l7n1_28w_avg_pd.rename(columns={\n",
+    "    'PORVL7N1':'PORVL7'\n",
+    "})\n",
+    "print(phreatic_level_l7n1_28w_avg_pd.head())\n",
+    "# Export phreatic_level_l7n1_28w_avg_pd dataframe \n",
+    "# Fecha | PORVL7 |  # Only one column one N1\n",
+    "#       |       |\n",
+    "phreatic_level_l7n1_28w_avg_pd.to_csv( '../../../../data/interim/PhreaticLevel/'  \\\n",
+    "                            '28-weeks_January-12_August-03_2018/PhreaticLevelAverage_by-Lot/' \\\n",
+    "                            'PORVL7_average_per-day.csv', sep=',', header=True, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        Fecha    PORVL8\n",
+      "0  2018-01-12  1.041739\n",
+      "1  2018-01-13  0.738750\n",
+      "2  2018-01-14  0.584167\n",
+      "3  2018-01-15  0.641667\n",
+      "4  2018-01-16  0.929583\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Reading PORVL8 average per day values\n",
+    "phreatic_level_l8n1_28w_avg_pd = pd.read_csv('../../../../data/interim/PhreaticLevel/'  \\\n",
+    "                    '28-weeks_January-12_August-03_2018/PhreaticLevel_By_Lots-Nodes_Average_by-day/' \\\n",
+    "                    'PORVL8N1_average_per-day.csv')\n",
+    "phreatic_level_l8n1_28w_avg_pd = phreatic_level_l8n1_28w_avg_pd.rename(columns={\n",
+    "    'PORVL8N1':'PORVL8'\n",
+    "})\n",
+    "print(phreatic_level_l8n1_28w_avg_pd.head())\n",
+    "# Export phreatic_level_l8n1_28w_avg_pd dataframe \n",
+    "# Fecha | PORVL8 |  # Only one column one N1\n",
+    "#       |       |\n",
+    "phreatic_level_l8n1_28w_avg_pd.to_csv( '../../../../data/interim/PhreaticLevel/'  \\\n",
+    "                            '28-weeks_January-12_August-03_2018/PhreaticLevelAverage_by-Lot/' \\\n",
+    "                            'PORVL8_average_per-day.csv', sep=',', header=True, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        Fecha    PORVL9\n",
+      "0  2018-01-12  1.033043\n",
+      "1  2018-01-13  0.772917\n",
+      "2  2018-01-14  0.725000\n",
+      "3  2018-01-15  0.735000\n",
+      "4  2018-01-16  0.892917\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Reading PORVL9 average per day values\n",
+    "phreatic_level_l9n1_28w_avg_pd = pd.read_csv('../../../../data/interim/PhreaticLevel/'  \\\n",
+    "                    '28-weeks_January-12_August-03_2018/PhreaticLevel_By_Lots-Nodes_Average_by-day/' \\\n",
+    "                    'PORVL9N1_average_per-day.csv')\n",
+    "phreatic_level_l9n1_28w_avg_pd = phreatic_level_l9n1_28w_avg_pd.rename(columns={\n",
+    "    'PORVL9N1':'PORVL9'\n",
+    "})\n",
+    "print(phreatic_level_l9n1_28w_avg_pd.head())\n",
+    "# Export phreatic_level_l9n1_28w_avg_pd dataframe \n",
+    "# Fecha | PORVL9 |  # Only one column one N1\n",
+    "#       |       |\n",
+    "phreatic_level_l9n1_28w_avg_pd.to_csv( '../../../../data/interim/PhreaticLevel/'  \\\n",
+    "                            '28-weeks_January-12_August-03_2018/PhreaticLevelAverage_by-Lot/' \\\n",
+    "                            'PORVL9_average_per-day.csv', sep=',', header=True, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        Fecha   PORVL10\n",
+      "0  2018-01-12  0.949130\n",
+      "1  2018-01-13  0.694583\n",
+      "2  2018-01-14  0.645833\n",
+      "3  2018-01-15  0.692963\n",
+      "4  2018-01-16  0.774000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Reading PORVL10 average per day values\n",
+    "phreatic_level_l10n1_28w_avg_pd = pd.read_csv('../../../../data/interim/PhreaticLevel/'  \\\n",
+    "                    '28-weeks_January-12_August-03_2018/PhreaticLevel_By_Lots-Nodes_Average_by-day/' \\\n",
+    "                    'PORVL10N1_average_per-day.csv')\n",
+    "phreatic_level_l10n1_28w_avg_pd = phreatic_level_l10n1_28w_avg_pd.rename(columns={\n",
+    "    'PORVL10N1':'PORVL10'\n",
+    "})\n",
+    "print(phreatic_level_l10n1_28w_avg_pd.head())\n",
+    "# Export phreatic_level_l10n1_28w_avg_pd dataframe \n",
+    "# Fecha | PORVL10 |  # Only one column one N1\n",
+    "#       |       |\n",
+    "phreatic_level_l10n1_28w_avg_pd.to_csv( '../../../../data/interim/PhreaticLevel/'  \\\n",
+    "                            '28-weeks_January-12_August-03_2018/PhreaticLevelAverage_by-Lot/' \\\n",
+    "                            'PORVL10_average_per-day.csv', sep=',', header=True, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        Fecha   PORVL13\n",
+      "0  2018-01-12  1.030870\n",
+      "1  2018-01-13  0.669583\n",
+      "2  2018-01-14  0.518750\n",
+      "3  2018-01-15  0.614167\n",
+      "4  2018-01-16  0.798750\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Reading PORVL13 average per day values\n",
+    "phreatic_level_l13n1_28w_avg_pd = pd.read_csv('../../../../data/interim/PhreaticLevel/'  \\\n",
+    "                    '28-weeks_January-12_August-03_2018/PhreaticLevel_By_Lots-Nodes_Average_by-day/' \\\n",
+    "                    'PORVL13N1_average_per-day.csv')\n",
+    "phreatic_level_l13n1_28w_avg_pd = phreatic_level_l13n1_28w_avg_pd.rename(columns={\n",
+    "    'PORVL13N1':'PORVL13'\n",
+    "})\n",
+    "print(phreatic_level_l13n1_28w_avg_pd.head())\n",
+    "# Export phreatic_level_l13n1_28w_avg_pd dataframe \n",
+    "# Fecha | PORVL13 |  # Only one column one N1\n",
+    "#       |       |\n",
+    "phreatic_level_l13n1_28w_avg_pd.to_csv( '../../../../data/interim/PhreaticLevel/'  \\\n",
+    "                            '28-weeks_January-12_August-03_2018/PhreaticLevelAverage_by-Lot/' \\\n",
+    "                            'PORVL13_average_per-day.csv', sep=',', header=True, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        Fecha   PORVL14\n",
+      "0  2018-01-12  1.350435\n",
+      "1  2018-01-13  1.167500\n",
+      "2  2018-01-14  0.786667\n",
+      "3  2018-01-15  0.692000\n",
+      "4  2018-01-16  0.900833\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Reading PORVL14 average per day values\n",
+    "phreatic_level_l14n1_28w_avg_pd = pd.read_csv('../../../../data/interim/PhreaticLevel/'  \\\n",
+    "                    '28-weeks_January-12_August-03_2018/PhreaticLevel_By_Lots-Nodes_Average_by-day/' \\\n",
+    "                    'PORVL14N1_average_per-day.csv')\n",
+    "phreatic_level_l14n1_28w_avg_pd = phreatic_level_l14n1_28w_avg_pd.rename(columns={\n",
+    "    'PORVL14N1':'PORVL14'\n",
+    "})\n",
+    "print(phreatic_level_l14n1_28w_avg_pd.head())\n",
+    "# Export phreatic_level_l14n1_28w_avg_pd dataframe \n",
+    "# Fecha | PORVL14 |  # Only one column one N1\n",
+    "#       |       |\n",
+    "phreatic_level_l14n1_28w_avg_pd.to_csv( '../../../../data/interim/PhreaticLevel/'  \\\n",
+    "                            '28-weeks_January-12_August-03_2018/PhreaticLevelAverage_by-Lot/' \\\n",
+    "                            'PORVL14_average_per-day.csv', sep=',', header=True, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        Fecha   PORVL15\n",
+      "0  2018-01-12  1.082609\n",
+      "1  2018-01-13  0.880000\n",
+      "2  2018-01-14  0.841667\n",
+      "3  2018-01-15  0.842917\n",
+      "4  2018-01-16  0.962500\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Reading PORVL15 average per day values\n",
+    "phreatic_level_l15n1_28w_avg_pd = pd.read_csv('../../../../data/interim/PhreaticLevel/'  \\\n",
+    "                    '28-weeks_January-12_August-03_2018/PhreaticLevel_By_Lots-Nodes_Average_by-day/' \\\n",
+    "                    'PORVL15N1_average_per-day.csv')\n",
+    "phreatic_level_l15n1_28w_avg_pd = phreatic_level_l15n1_28w_avg_pd.rename(columns={\n",
+    "    'PORVL15N1':'PORVL15'\n",
+    "})\n",
+    "print(phreatic_level_l15n1_28w_avg_pd.head())\n",
+    "# Export phreatic_level_l15n1_28w_avg_pd dataframe \n",
+    "# Fecha | PORVL15 |  # Only one column one N1\n",
+    "#       |       |\n",
+    "phreatic_level_l15n1_28w_avg_pd.to_csv( '../../../../data/interim/PhreaticLevel/'  \\\n",
+    "                            '28-weeks_January-12_August-03_2018/PhreaticLevelAverage_by-Lot/' \\\n",
+    "                            'PORVL15_average_per-day.csv', sep=',', header=True, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
