Turning PORVL4N1, ... , PORVL15N1 to PORVL4, ... , PORVL15

--- a/notebooks/averaging_data/PhreaticLevel/28-weeks_January-12_August-03_2018/03-bgarcial-phreatic_level_generating_average_between-nodes_values.ipynb
+++ b/notebooks/averaging_data/PhreaticLevel/28-weeks_January-12_August-03_2018/03-bgarcial-phreatic_level_generating_average_between-nodes_values.ipynb
@@ -1444,7 +1444,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Turning PORVL4N1, ... , PORVL15N1 average per day values to PORVL4, ... , PORVL1 "
+    "## 2. Turning PORVL4N1, ... , PORVL15N1 average per day values \n",
+    "## to PORVL4, ... , PORVL15 "
    ]
   },
   {
