Average per day to each lot [PORVL16 averaging N1 and N2]

--- a/notebooks/averaging_data/PhreaticLevel/28-weeks_January-12_August-03_2018/03-bgarcial-phreatic_level_generating_average_between-nodes_values.ipynb
+++ b/notebooks/averaging_data/PhreaticLevel/28-weeks_January-12_August-03_2018/03-bgarcial-phreatic_level_generating_average_between-nodes_values.ipynb
@@ -1877,11 +1877,459 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Concatenating PORVL16N1 and PORVL16N2 average per day values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.1 Reading PORVL16N1 average per day value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phreatic_level_l16n1_28w_avg_pd = pd.read_csv('../../../../data/interim/PhreaticLevel/'  \\\n",
+    "                    '28-weeks_January-12_August-03_2018/PhreaticLevel_By_Lots-Nodes_Average_by-day/' \\\n",
+    "                    'PORVL16N1_average_per-day.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(204, 2)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fecha</th>\n",
+       "      <th>PORVL16N1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2018-01-12</td>\n",
+       "      <td>0.883913</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2018-01-13</td>\n",
+       "      <td>0.682917</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2018-01-14</td>\n",
+       "      <td>0.607083</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2018-01-15</td>\n",
+       "      <td>0.667917</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2018-01-16</td>\n",
+       "      <td>0.813333</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Fecha  PORVL16N1\n",
+       "0  2018-01-12   0.883913\n",
+       "1  2018-01-13   0.682917\n",
+       "2  2018-01-14   0.607083\n",
+       "3  2018-01-15   0.667917\n",
+       "4  2018-01-16   0.813333"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(phreatic_level_l16n1_28w_avg_pd.shape)\n",
+    "phreatic_level_l16n1_28w_avg_pd.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.2 Reading PORVL16N2 average per day value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phreatic_level_l16n2_28w_avg_pd = pd.read_csv('../../../../data/interim/PhreaticLevel/'  \\\n",
+    "                    '28-weeks_January-12_August-03_2018/PhreaticLevel_By_Lots-Nodes_Average_by-day/' \\\n",
+    "                    'PORVL16N2_average_per-day.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(204, 2)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fecha</th>\n",
+       "      <th>PORVL16N2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2018-01-12</td>\n",
+       "      <td>1.545217</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2018-01-13</td>\n",
+       "      <td>1.528750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2018-01-14</td>\n",
+       "      <td>1.386667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2018-01-15</td>\n",
+       "      <td>1.228750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2018-01-16</td>\n",
+       "      <td>1.227083</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Fecha  PORVL16N2\n",
+       "0  2018-01-12   1.545217\n",
+       "1  2018-01-13   1.528750\n",
+       "2  2018-01-14   1.386667\n",
+       "3  2018-01-15   1.228750\n",
+       "4  2018-01-16   1.227083"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(phreatic_level_l16n2_28w_avg_pd.shape)\n",
+    "phreatic_level_l16n2_28w_avg_pd.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.3 Merging phreatic level averages per day dataframes\n",
+    "\n",
+    "Now, we going to merge the **`phreatic_level_l16n1_28w_avg_pd`** and **`phreatic_level_l16n2_28w_avg_pd`** dataframes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.merge.html\n",
+    "phreatic_level_l16_28w_avg_pd = pd.merge(phreatic_level_l16n1_28w_avg_pd,phreatic_level_l16n2_28w_avg_pd, how='inner', on='Fecha')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(204, 3)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fecha</th>\n",
+       "      <th>PORVL16N1</th>\n",
+       "      <th>PORVL16N2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2018-01-12</td>\n",
+       "      <td>0.883913</td>\n",
+       "      <td>1.545217</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2018-01-13</td>\n",
+       "      <td>0.682917</td>\n",
+       "      <td>1.528750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2018-01-14</td>\n",
+       "      <td>0.607083</td>\n",
+       "      <td>1.386667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2018-01-15</td>\n",
+       "      <td>0.667917</td>\n",
+       "      <td>1.228750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2018-01-16</td>\n",
+       "      <td>0.813333</td>\n",
+       "      <td>1.227083</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Fecha  PORVL16N1  PORVL16N2\n",
+       "0  2018-01-12   0.883913   1.545217\n",
+       "1  2018-01-13   0.682917   1.528750\n",
+       "2  2018-01-14   0.607083   1.386667\n",
+       "3  2018-01-15   0.667917   1.228750\n",
+       "4  2018-01-16   0.813333   1.227083"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(phreatic_level_l16_28w_avg_pd.shape)\n",
+    "phreatic_level_l16_28w_avg_pd.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.4 Generating average between PORVL16N1 and PORVL16N2 values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phreatic_level_l16_28w_avg_pd['PORVL16_AVERAGE'] = phreatic_level_l16_28w_avg_pd.mean(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fecha</th>\n",
+       "      <th>PORVL16N1</th>\n",
+       "      <th>PORVL16N2</th>\n",
+       "      <th>PORVL16_AVERAGE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2018-01-12</td>\n",
+       "      <td>0.883913</td>\n",
+       "      <td>1.545217</td>\n",
+       "      <td>1.214565</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2018-01-13</td>\n",
+       "      <td>0.682917</td>\n",
+       "      <td>1.528750</td>\n",
+       "      <td>1.105833</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2018-01-14</td>\n",
+       "      <td>0.607083</td>\n",
+       "      <td>1.386667</td>\n",
+       "      <td>0.996875</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2018-01-15</td>\n",
+       "      <td>0.667917</td>\n",
+       "      <td>1.228750</td>\n",
+       "      <td>0.948333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2018-01-16</td>\n",
+       "      <td>0.813333</td>\n",
+       "      <td>1.227083</td>\n",
+       "      <td>1.020208</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Fecha  PORVL16N1  PORVL16N2  PORVL16_AVERAGE\n",
+       "0  2018-01-12   0.883913   1.545217         1.214565\n",
+       "1  2018-01-13   0.682917   1.528750         1.105833\n",
+       "2  2018-01-14   0.607083   1.386667         0.996875\n",
+       "3  2018-01-15   0.667917   1.228750         0.948333\n",
+       "4  2018-01-16   0.813333   1.227083         1.020208"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "phreatic_level_l16_28w_avg_pd.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export phreatic_level_l16_28w_avg_pd dataframe \n",
+    "# Fecha | PORVL16N1 | PORVL16N2 | PORVL16_AVERAGE |\n",
+    "#       |          |          |                |\n",
+    "phreatic_level_l16_28w_avg_pd.to_csv( '../../../../data/interim/PhreaticLevel/'  \\\n",
+    "                            '28-weeks_January-12_August-03_2018/PhreaticLevelAverage_by-Lot/' \\\n",
+    "                            'LOTx_N_y_AVG_x-y_table/PORVL16N1_N2_average_per-lot.csv', sep=',', header=True, index=False)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "phreatic_level_l16_28w_avg_pd = phreatic_level_l16_28w_avg_pd[['Fecha','PORVL162_AVERAGE']]"
+   ]
   }
  ],
  "metadata": {
